# v7-engine

./: .dockerignore  .env.example  .gitignore  .praxis_mcp.sh  AGENTS.md  CLAUDE.md  CUsersdresdenAppDataLocalTempsweep_out.txt  Dockerfile  Dockerfile.backend  Dockerfile.frontend  MEMORY.md  Makefile  README.md  SUMMARY.txt  accp.yaml  ai_summary.md  ci-issue-body.md  compose.yaml  crypto_alpha_research_output.json  cs_rank_test3.py  docker-compose.yml  enhanced_train.py  enhanced_train2.py  labeling_research_output.json  mutagen.yml  opencode.json  optimize_sol_stop_target_results.json  overnight-scalp-005.md  pyproject.toml  requirements.frozen.txt  requirements.txt  template.json  template.md  template.yaml  test.sh  train_pipeline.py
.agent/: CONTEXT_INDEX.md  CURRENT_TASK.md  EVIDENCE_REQUIREMENTS.md  HANDOFF.md  project_context.md
.brv/: config.json
.claude/: .synced_commits  settings.json
.mimocode/: .cron-lock
.praxis/: grup-bcf.plan.yaml  issue-179.plan.yaml  issue-268_183_306.plan.yaml  issue-299.plan.yaml  issue-313.plan.yaml  issue-326.plan.yaml
.praxis_plans/: fix-265-planspec.yaml  fix-265-v2.yaml  fix-265.yaml
.serena/: project.yml
alphaforge/: AI_SUMMARY__V7_ALPHAFORGE_XGB.md  HARDENING_REVIEW_FIXES.md  MODEL_NAME_RECOMMENDATION.md  README.md  manifest.json
alphaforge_report/: alpha_ledger.json  research_run_index.json
cache/: feature_dump_names.txt  feature_dump_v2_names.txt
cli/: __init__.py  __main__.py  download_binance_data.py  generate_run_summary.py  menu.py  real_training.py  run_xsmom_baseline.py  run_xsmom_daily.py  v7_engine.py  v7_pipeline.py
colab/: colab.bat  colab.cmd  colab.py  colab_auth.py  colab_runner.py  colab_train.cmd  run.py  v7_training_colab.ipynb  write_nb.py
tools/agent_orchestrator/: README.md  __init__.py  claude_worker.py  config.example.json  config.example.yaml  controller.py  gate.py  pyproject.toml  run_context.py  strategist_client.py  test_output.txt
tools/agent_orchestrator/prompts/: strategist_system.md  worker_task_template.md
tools/agent_orchestrator/runs/: dummy_test_001.txt
tools/agent_orchestrator/runs/20260705_005820_853581/: goal.json  summary.json
tools/agent_orchestrator/runs/20260705_005820_853581/iter_000/: claude_stream.jsonl  gate_result.json  git_snapshot.json  strategist_response.json  summary.json  worker_output.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_010614_117097/: goal.json  summary.json
tools/agent_orchestrator/runs/20260705_010614_117097/iter_000/: claude_stream.jsonl  gate_result.json  git_snapshot.json  strategist_response.json  summary.json  worker_output.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_011048_332496/: goal.json  summary.json
tools/agent_orchestrator/runs/20260705_011048_332496/iter_000/: claude_stream.jsonl  gate_result.json  git_snapshot.json  strategist_response.json  summary.json  worker_output.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_011910_399999/: goal.json  summary.json
tools/agent_orchestrator/runs/20260705_011910_399999/iter_000/: claude_stream.jsonl  gate_result.json  git_snapshot.json  strategist_response.json  summary.json  worker_output.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_012123_408771/: goal.json
tools/agent_orchestrator/runs/20260705_012123_408771/iter_000/: claude_stream.jsonl  git_snapshot.json  strategist_response.json  worker_output.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_012545_189117/: goal.json  summary.json
tools/agent_orchestrator/runs/20260705_012545_189117/iter_000/: claude_stream.jsonl  gate_result.json  git_snapshot.json  strategist_response.json  summary.json  worker_output.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_012707_758452/: goal.json  summary.json
tools/agent_orchestrator/runs/20260705_012707_758452/iter_000/: claude_stream.jsonl  gate_result.json  git_snapshot.json  strategist_response.json  summary.json  worker_output.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_012842_084189/: goal.json  summary.json
tools/agent_orchestrator/runs/20260705_012842_084189/iter_000/: claude_stream.jsonl  gate_result.json  git_snapshot.json  strategist_response.json  summary.json  worker_output.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_013041_204333/: goal.json  summary.json
tools/agent_orchestrator/runs/20260705_013041_204333/iter_000/: claude_stream.jsonl  gate_result.json  git_snapshot.json  strategist_response.json  summary.json  worker_output.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_013157_699995/: goal.json  summary.json
tools/agent_orchestrator/runs/20260705_013157_699995/iter_000/: claude_stream.jsonl  gate_result.json  git_snapshot.json  strategist_response.json  summary.json  worker_output.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_013450_228563/: goal.json
tools/agent_orchestrator/runs/20260705_013450_228563/iter_000/: git_snapshot.json  strategist_request.json  strategist_response.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_013702_614575/: STOP  goal.json  summary.json
tools/agent_orchestrator/runs/20260705_013702_614575/iter_000/: claude_stream.jsonl  gate_result.json  git_snapshot.json  strategist_response.json  summary.json  worker_output.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_014027_746731/: goal.json
tools/agent_orchestrator/runs/20260705_014027_746731/iter_000/: git_snapshot.json  strategist_response.json  worker_task.txt
tools/agent_orchestrator/runs/20260705_014504_796353/: goal.json
tools/agent_orchestrator/runs/20260705_014504_796353/iter_000/: git_snapshot.json  strategist_request.json  strategist_response.json  worker_task.txt
tools/agent_orchestrator/tests/: test_controller.py  test_gate.py  test_run_context.py  test_strategist_client.py
tools/agent_orchestrator/webui/: server.py
tools/agent_orchestrator/webui/static/: index.html
v7/: risk.py  (+21 more)
(+2938 files in other folders)
