[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "v7-engine"
version = "0.1.0"
description = "V7 Engine — quantitative trading research and production"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.1",
    "mypy>=1.0",
]
interface = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "psycopg2-binary>=2.9",
    "alembic>=1.12",
]

[tool.setuptools.packages.find]
include = [
    "lib*",
    "simulation*",
    "alphaforge*",
    "v6*",
    "v7*",
    "runtime*",
    "integration*",
]

[tool.setuptools.package-dir]
lib = "lib"
simulation = "simulation"
alphaforge = "alphaforge/src/alphaforge"
v7 = "v7/src/v7"
v6 = "v6"
runtime = "runtime"
integration = "integration"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "alphaforge/src",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
ignore = ["E501", "F401"]
